working commandline support, note: will not enforce notnull project in change.java

--- a/platform/platform-resources-en/src/messages/DiffBundle.properties
+++ b/platform/platform-resources-en/src/messages/DiffBundle.properties
@@ -1,10 +1,8 @@
-diff.application.usage.parameters.and.description=Usage: {0} diff <file1> <file2>
-
-cannot.file.file.error=Cannot find file: {0}
-cannot.create.diff.error=Cannot create diff element from: {0}
-cannot.compare.error=Diff manager cannot compare ''{0}' and ''{1}''
-unknown.file.type.error=Unknown file type: {0}
-
+diff.application.usage.parameters.and.description=Usage: idea diff <file1> <file2>
+merge.application.usage.parameters.and.description=Usage: idea merge <leftfile> <rightfile> <original> <result>
+merge.dirs.error.message=Merge cannot work with directories
+cannot.file.file.error.message=Cannot find file: {0}
+cannot.create.file.error.message=Cannot create file: {0}
 save.merge.result.command.name=Merge
 compare.file.vs.file.dialog.title={0} vs {1}
 diff.content.editor.content.title=Editor
@@ -28,10 +26,10 @@ diff.compare.element.type.with.editor.action.name=Compare File with Editor
 diff.element.qualified.name.vs.editor.dialog.title={0} vs Editor
 diff.element.qualified.name.vs.file.dialog.title={0} vs {1}
 diff.element.qualified.name.vs.element.qualified.name.dialog.title={0} vs {1}
-diff.acton.ignore.whitespace.policy.do.not.ignore=Do not ignore
-diff.acton.ignore.whitespace.policy.leading.and.trailing=Leading and trailing
-diff.acton.ignore.whitespace.policy.all=All
-ignore.whitespace.action.not.available.action.name=<Not available>
+diff.acton.ignore.qhitespace.policy.do.not.ignore=Do not ignore
+diff.acton.ignore.qhitespace.policy.leading.and.trailing=Leading and trailing
+diff.acton.ignore.qhitespace.policy.all=All
+ignore.whitespace.action.not.avaliable.action.name=<Not available>
 diff.dialog.select.change.action.name=Select Change
 diff.dialog.select.change.action.description=Select changed text in this version and corresponding in other
 merge.files.dialog.title=Merge
@@ -39,6 +37,10 @@ merge.dialog.cannot.load.file.error.message=Cannot load file: {0}
 merge.editor.replace.operation.name=Replace
 merge.editor.insert.operation.name=Insert
 merge.editor.remove.operation.name=Remove
+comparison.policy.default.name=Default
+comparison.policy.trim.space.name=Trim space
+comparison.policy.ignore.spaces.name=Ignore spaces
+comparison.ignore.whitespace.acton.name=Ignore whitespace:
 diff.count.differences.status.text={0, choice, 0#no differences|1#1 difference|2#{0, number} differences}
 cant.launch.diff.tool.error.message=Can''t Launch Diff Tool
 binary.files.are.identical.message=Binary files are identical
@@ -48,7 +50,6 @@ files.are.different.dialog.title=Files Are Different
 diff.options.diff.options.border=Diff Options
 diff.options.use.external.tool.for.files.checkbox=Use external tool to compare files:
 diff.options.use.external.tool.for.directories.checkbox=Use external tool to compare folders:
-diff.options.use.external.merge.tool.for.files.checkbox=Use external merge tool:
 select.external.diff.program.dialog.title=Select External Diff Program
 diff.contents.are.identical.message.text=Contents are identical
 diff.contents.have.differences.only.in.line.separators.message.text=Contents have differences only in line separators
@@ -78,5 +79,3 @@ diff.type.changed.name=Changed
 diff.type.deleted.name=Deleted
 diff.type.conflict.name=Conflict
 diff.type.none.name=None
-diff.content.selected.value=Selected Value
-diff.clipboard.vs.value.dialog.title=Clipboard vs Selected Value
